deploy: 9f043db2f3975c0b975bfa60a46ef6992970d12b

--- a/tutorials/the_truth/drag_and_drop.html
+++ b/tutorials/the_truth/drag_and_drop.html
@@ -180,6 +180,9 @@
     void (*debug_print)(tm_the_truth_o *tt, uint64_t o);
 } tm_debug_print_aspect_i;
 </code></pre>
+<blockquote>
+<p><strong>Note:</strong> to genereate the <a href="https://ourmachinery.com/apidoc/foundation/api_types.h.html#tm_static_hash()">TM_STATIC_HASH</a> you need to run <code>hash.exe</code> or <code>tmbuild.exe --gen-hash</code> for more info open the <a href="https://ourmachinery.github.io/themachinery-books/the_machinery_book//helper_tools/hash.html">hash.exe guide</a></p>
+</blockquote>
 <p>You could then use this code to debug print an object <code>o</code> with:</p>
 <pre><code class="language-c">tm_debug_print_aspect_i *dp = tm_the_truth_api-&gt;get_aspect(tt, tm_tt_type(o), TM_DEBUG_PRINT_ASPECT);
 if (dp)
